--- a/issues/3.md
+++ b/issues/3.md
@@ -2,7 +2,7 @@
 
 some description...
 
-Reporter: GitBoard <->  
+Reporter: qqqqqq qqq@example.com
 
 Created: 2019-08-14T13:48:45Z  
 Updated: 2019-10-01T11:57:38Z
