--- a/issues/1.md
+++ b/issues/1.md
@@ -1,6 +1,7 @@
 # qqqq
 
 some text added by PATCH
+manual edit
 
 Reporter: qqq <qqq@example.com>  
 
@@ -10,3 +11,4 @@ Updated: 2019-12-20T11:12:37.292Z
 Type: task  
 Status: backlog  
 Priority: 3.96484375
+
