--- a/issues/15.md
+++ b/issues/15.md
@@ -2,17 +2,9 @@
 
 nothing, but some description
 
-Reporter:  <>
-
-Reporter:  <>
-
-Reporter:  <>
-
-Reporter:  <>  
-
 Created: 2019-12-13T16:43:54.517Z  
 Updated: 2020-01-23T15:01:13.356Z
 
 Type: task  
-Status: backlog  
+Status: selected  
 Priority: 13.75
