--- a/issues/19.md
+++ b/issues/19.md
@@ -1,6 +1,6 @@
 # manually created issue via github
 
-qwqwqw
+moved manually
 
 Reporter:  <>  
 
@@ -9,4 +9,4 @@ Updated: 2020-01-28T15:26:40.759Z
 
 Type: task  
 Status: backlog  
-Priority: 19
+Priority: 17.5
