--- a/issues/18.md
+++ b/issues/18.md
@@ -7,6 +7,8 @@ Reporter:  <>
 Created: 2020-01-27T17:27:51.511Z  
 Updated: 2020-01-27T17:29:39.761Z
 
+Arhived: true
+
 Type: task  
 Status: backlog  
 Priority: 18
