--- a/issues/12.md
+++ b/issues/12.md
@@ -8,5 +8,5 @@ Created: 2019-12-03T17:00:19.454Z
 Updated: 2019-12-18T16:18:07.726Z
 
 Type: task  
-Status: selected  
+Status: backlog  
 Priority: 0.1
