--- a/issues/18.md
+++ b/issues/18.md
@@ -7,7 +7,7 @@ Reporter:  <>
 Created: 2020-01-27T17:27:51.511Z  
 Updated: 2020-01-27T17:29:39.761Z
 
-Archived: false
+Archived: true
 
 Type: task  
 Status: selected  
