--- a/issues/18.md
+++ b/issues/18.md
@@ -7,6 +7,7 @@ Reporter:  <>
 Created: 2020-01-27T17:27:51.511Z  
 Updated: 2020-01-28T15:56:53.683Z
 
+Archived: true
 Type: task  
 Status: selected  
 Priority: 3.900390625
