--- a/issues/10.md
+++ b/issues/10.md
@@ -9,5 +9,9 @@ Updated: 2019-11-22T10:23:42.458Z
 
 Type: task  
 Status: backlog  
-Archived: true  
+Archived: false  
 Priority: 10
+
+## Blocks
+[11](11.md)
+[12](12.md)
