--- a/issues/11.md
+++ b/issues/11.md
@@ -12,3 +12,7 @@ Updated: 2020-01-30T09:18:40.026Z
 Type: task  
 Status: selected  
 Priority: 10.671875
+
+## Blocked by
+- [10](10.md)
+- [1](1.md)
