--- a/issues/11.md
+++ b/issues/11.md
@@ -13,8 +13,10 @@ Type: task
 Status: selected  
 Priority: 10.671875
 
-## Blocked by
+## Blocks
 - [1](1.md)
+
+## Blocked by
 - [13](13.md)
 - [14](14.md)
 
