--- a/issues/3.md
+++ b/issues/3.md
@@ -11,8 +11,7 @@ Type: task
 Status: backlog  
 Priority: 12.5625
 
-## Parent
-[1](1.md "bbbb")
+Parent: [1](1.md "bbbb")
 
 ## Blocked By
 - [1](1.md "bbbb")
