--- a/issues/4.md
+++ b/issues/4.md
@@ -9,8 +9,7 @@ Type: task
 Status: backlog  
 Priority: 3.96875
 
-## Parent
-[10](10.md "New Issue")
+Parent: [10](10.md "New Issue")
 
 ## Duplicates
 - [5](5.md "Created via API v3")
