--- a/issues/11.md
+++ b/issues/11.md
@@ -28,18 +28,18 @@ Priority: 10.671875
 
 2.  another comment
 
-    Author: Issue was modified manually via GIT <>  
+    Author: q q q q q  GIT <>  
     Created: 2020-03-23T13:53:09.109Z  
     Updated: 2020-03-23T13:53:09.109Z
 
 3.  3rd comment
 
-    Author: Issue was modified manually via GIT <>  
+    Author: w w w w w < >  
     Created: 2020-03-23T13:53:09.109Z  
     Updated: 2020-03-23T13:53:09.109Z
 
 4.  4th comment
 
-    Author: István Rátkai <>  
+    Author: István Rátkai <ccc>  
     Created: 2020-03-23T13:55:26.173Z  
     Updated: 2020-03-23T13:55:26.173Z
