--- a/issues/11.md
+++ b/issues/11.md
@@ -26,7 +26,9 @@ Priority: 10.671875
     Created: 2020-03-23T13:53:09.109Z  
     Updated: 2020-03-23T13:53:09.109Z
 
-2.  another comment
+2.  another comment - edited
+    
+    Author: Fantomas
 
 3.  3rd comment
 
