--- a/issues/1.md
+++ b/issues/1.md
@@ -21,3 +21,9 @@ Priority: 11.0048828125
 ## Blocks
 - [3](3.md "Edit the new file")
 - [4](4.md "Unreferenced issue")
+
+## Comments
+1.  some comment
+
+    Author: Bela <bela@example.com>  
+   
