--- a/issues/1.md
+++ b/issues/1.md
@@ -23,7 +23,7 @@ Priority: 11.0048828125
 - [4](4.md "Unreferenced issue")
 
 ## Comments
-1.  some comment
+1.  some comment...
 
     Author: Bela <bela@example.com>  
    
