--- a/issues/1.md
+++ b/issues/1.md
@@ -27,5 +27,9 @@ Priority: 11.0048828125
 
     dddddd
 
-    Author: Bela <bela@example.com>  
+    Author: Bela <bela@example.com>
+
+1.  2nd comment
+
+    Author: Jeno <jeno@example.com>  
    
