--- a/issues/1.md
+++ b/issues/1.md
@@ -37,8 +37,9 @@ Priority: 11.0048828125
     Created: 2020-03-24T09:43:44Z  
     Updated: 2020-03-24T09:43:44Z
 
-3.  UI comment
-
-    Author: István Rátkai <>  
+3.  UI comment  
+    2nd line
+    
+    Author: István Rátkai
     Created: 2020-03-24T09:44:15.036Z  
     Updated: 2020-03-24T09:44:15.036Z
