--- a/issues/1.md
+++ b/issues/1.md
@@ -31,7 +31,7 @@ Priority: 11.0048828125
     Created: 2020-03-24T09:43:44Z  
     Updated: 2020-03-24T09:43:44Z
 
-2.  2nd comment
+2.  2nd comment edited
 
     Author: Jeno <jeno@example.com>  
     Created: 2020-03-24T09:43:44Z  
