--- a/issues/1.md
+++ b/issues/1.md
@@ -38,6 +38,7 @@ Priority: 11.0048828125
     Created: 2020-03-24T09:44:15.036Z  
     Updated: 2020-03-24T09:44:15.036Z
 
+2.  new comment in the middle
 3.  UI comment 2
 
     Author: István Rátkai  
